# phd-welman

./: .gitignore  LICENSE  README.md  experiments.ipynb  main.py  pyproject.toml  tests.py
phd_welman/: __init__.py  config.py  typings.py  utilities.py
phd_welman/agents/: boolean.py  designs.md
phd_welman/agents/extraction/: path.py  text.py
phd_welman/agents/workflow/: compile.py
